# C-C-fault-injector

./: .gitignore  IS-x86.md  ProcToDebug.cpp  README.md  appuntiWin.md  notes.md  prog.cpp  proj.cpp  trycopyfile.cpp  vecchioCodice  win_prog.md
Charts/: charts.py
Documentation/: AddressSelector.md  BreakPoint.md  CompareFiles.md  Debugee.md  Debugger.md  Extractor.md  FunctionObject.md  InjectionPoint.md  InstructionObject.md  Output_functions
Linux/: fakeoutput.txt
Linux/FaultInjector/: .FaultInjector.cpp.swp  .gitignore  Controller.cpp  Controller.h  Controller.h.gch  CopiaProva.cpp  CopyProva.cpp  Debugee2  Debugee2.c  Debugger.cpp  Debugger.h  Debugger.h.gch  FIng  FInj  FaultInjector  FaultInjector.cpp  Prova.c  ProvaPid.c  TestPid  a.out  address_offset.txt  addrs.txt  dump  main.cpp  note  note.txt  prova  prova.cpp  run.sh  symbol.txt
Linux/FaultInjector/boost_cmake_prova/: CMakeCache.txt  CMakeLists.txt  Prova  ProvaConfig.h  ProvaConfig.h.in
Linux/ProvaArgv/: a.out  prog  prog.c  provaargv.c
Linux/ProvaFileread/: Fileread.cpp  a.out
Linux/mydebug/: a.out  cat  grep  log  main.cpp  prog  prog.c
VS_Project/FaultInjector/: FaultInjector.sln
Windows/: PorcToDebug1.cpp  appuntiWin.md
Windows/VS_Project/: README.txt
src/: Makefile  debugoutputaddresses  injector  main.cpp  prova  provaoutput  sample_output
src/AddressSelector/: AddressSelector.cpp  AddressSelector.h
src/BreakPoint/: BreakPoint.cpp
src/Debugger/: Debugger.cpp  Debugger.h
src/Extractor/: Extractor.cpp
src/FunctionObject/: FunctionObject.cpp  FunctionObject.h
src/InjectionPoint/: InjectionPoint.cpp  InjectionPoint.h
versions/: main.cpp
(+158 files in other folders)
